src/index.css
@import 'tailwindcss';

@font-face {
  font-family: 'Manrope';
  font-style: normal;
  font-weight: 400 500 700;
  font-display: swap;
  src: url(./assets/fonts/Manrope/Manrope-Variable.woff2);
}

@theme {
  /* typography (start) */
  --font-display: 'Manrope' 'sans-serif';

  /* xs */
  --text-xs: 0.8125rem; /* 13px */
  --text-xs--line-height: 1.923; /* 25 / 13 */
  --text-xs--letter-spacing: 0.0625em; /* 1px */
  --text-xs--font-weight: 700;

  /* form */
  --text-form: 0.875rem; /* 14px */
  --text-form--line-height: 1; /* 14 / 14 */
  --text-form--letter-spacing: -0.015625em; /* -0.25px */
  --text-form--font-weight: 700;

  /* sm */
  --text-sm: 0.875rem; /* 14px */
  --text-sm--line-height: 1.357; /* 19 / 14 */
  --text-sm--letter-spacing: 0.625em; /* 10px */
  --text-sm--font-weight: 400;

  /* md */
  --text-md: 1.125rem; /* 18px */
  --text-md--line-height: 1.333; /* 24 / 18 */
  --text-md--letter-spacing: 0.08125em; /* 1.3px */
  --text-md--font-weight: 700;

  /* lg */
  --text-lg: 1.5rem; /* 24px */
  --text-lg--line-height: 1.375; /* 33 / 24 */
  --text-lg--letter-spacing: 0.10625em; /* 1.7px */
  --text-lg--font-weight: 700;

  /* xl */
  --text-xl: 1.75rem; /* 28px */
  --text-xl--line-height: 1.357; /* 38 / 28 */
  --text-xl--letter-spacing: 0.125em; /* 2px */
  --text-xl--font-weight: 700;

  /* 2xl */
  --text-2xl: 2rem; /* 32px */
  --text-2xl--line-height: 1.125; /* 36 / 32 */
  --text-2xl--letter-spacing: 0.071875em; /* 1.15px */
  --text-2xl--font-weight: 700;

  /* 3xl */
  --text-3xl: 2.5rem; /* 40px */
  --text-3xl--line-height: 1.1; /* 44 / 40 */
  --text-3xl--letter-spacing: 0.09375em; /* 1.5px */
  --text-3xl--font-weight: 700;

  /* 4xl */
  --text-4xl: 3.5rem; /* 56px */
  --text-4xl--line-height: 1.036; /* 58 / 56 */
  --text-4xl--letter-spacing: 0.125em; /* 2px */
  --text-4xl--font-weight: 700;

  /* base */
  --text-base: 0.9375rem; /* 15px */
  --text-base--line-height: 1.667; /* 25 / 15 */
  --text-base--letter-spacing: 0;
  --text-base--font-weight: 500;
  /* typography (end) */

  /* breakpoints (start) */
  --breakpoint-sm: 40em;
  --breakpoint-md: 48em;
  --breakpoint-lg: 64em;
  /* breakpoints (end) */

  /* colors (start) */
  --color-primary-400: #d87d4a;
  --color-primary-200: #fbaf85;

  --color-black: #000000;
  --color-black-o-50: rgba(0, 0, 0, 0.5);
  --color-black-o-40: rgba(0, 0, 0, 0.4);

  --color-white: #ffffff;

  --color-gray-900: #101010;
  --color-gray-700: #979797;
  --color-gray-600: #cfcfcf;
  --color-gray-400: #f1f1f1;
  --color-gray-200: #fafafa;

  --color-danger-400: #cd2c2c;
  /* colors (end) */

  /* tailwind (start) */
  --tw-border-style: solid;
  /* tailwind (end) */
}

@layer base {
  body {
    font: var(--font-base);
  }
}

@layer utilities {
  .wrapper {
    @apply w-full mx-auto px-5 md:max-w-172 md:px-10 lg:max-w-277.5;
  }

  .link-focusable {
    @apply focus:outline focus:outline-primary-400 focus-visible:outline focus-visible:outline-primary-400;
  }

  .nav-link {
    @apply text-xs uppercase text-white hover:text-primary-400;
  }
}

